<resources>
    <string name="app_name">HRM</string>
    <!--    <string name="default_web_client_id">default_web_client_id</string>-->
    <string name="logout_button">Logout</string>
    <string name="manual_signup">Sign Up</string>
    <string name="manual_signIn">Sign In</string>
    <string name="or">or</string>
    <string name="not_register">Not Registered Yet ? SignUp</string>
    <string name="registered">Already  Registered ? Sign In</string>
    <string name="name">Name</string>
    <string name="click_here">Click here</string>
    <string name="add_property">Add Property</string>
    <string name="not_rented">Not Rented</string>
    <string name="rented">Rented</string>
    <string name="my_properties">My Properties</string>
    <string name="password">Password</string>
    <string name="comercial_recidential">Comercial/Recidential</string>
    <string name="commercial_residential">Commercial/Residential</string>
    <string name="postal_zip_code">Postal/Zip Code</string>
    <string name="city">City</string>
    <string name="state_povince">State/Povince</string>
    <string name="landmark">Landmark</string>
    <string name="house_name">House Name</string>
    <string name="vacant">Vacant</string>
    <string name="submit">Submit</string>
    <string name="house_image">House Image</string>
    <string name="house_nick_name">House Nick Name</string>
    <string name="vacant_yes_no">Vacant(Yes/No)</string>
    <string name="upload_image">Upload</string>
    <string name="card_item_delete">Delete</string>
    <string name="card_item_financial_report">Financial Report</string>
    <string name="card_items_tenant_details">Tenant Details</string>
    <string name="card_item_update">Update</string>
    <string name="house_image_img">house image</string>
    <string name="update_house_details">Update House Details</string>
    <string name="submit_tenant_details">Submit Details</string>
    <string name="tenant_email">Email</string>
    <string name="tenant_phone_no">Phone No.</string>
    <string name="tenant_last_name">Last Name</string>
    <string name="tenant_first_name">First Name</string>
    <string name="add_tenant_button">Add Tenant</string>
    <string name="visit_vacant_properties"><![CDATA[visit vacant properties >]]></string>
    <string name="vacant_properties_enter_tenant_details">Enter Tenant Details</string>
    <string name="back_to_rented_properties">back to rented properties</string>
    <string name="vacant_properties_text">visit vacant properties</string>
    <string name="tenant_name">Name</string>
    <string name="enter_tenant_pending_dues">Enter Pending Dues</string>
    <string name="tenant_pending_dues">Pending Dues</string>
    <string name="update_house">Update House</string>
    <string name="update_tenant_details">Update Tenant</string>
    <string name="update_tenant_button">Update Tenant</string>
    <string name="delete_property">Delete</string>
    <string name="delete_tenant">Delete</string>
</resources>