<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateHouseDetails">


    <ImageView
        android:id="@+id/house_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:clickable="true"
        android:contentDescription="@string/house_image"
        android:focusable="true"
        android:scaleType="centerCrop"
        android:src="@drawable/add_image"
        app:layout_constraintEnd_toEndOf="@+id/building_type"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/building_type"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/building_type"
        android:layout_width="252dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:autofillHints="Residential"
        android:hint="@string/commercial_residential"
        android:inputType="text"
        android:textColor="#000"
        app:layout_constraintEnd_toEndOf="@+id/postal_code"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/postal_code"
        app:layout_constraintTop_toBottomOf="@+id/house_image" />

    <EditText
        android:id="@+id/postal_code"
        android:layout_width="252dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"

        android:inputType="number"
        android:autofillHints="Residential"
        app:layout_constraintEnd_toEndOf="@+id/state_province"
        app:layout_constraintHorizontal_bias="0.0"
        android:hint="@string/postal_zip_code"
        app:layout_constraintStart_toStartOf="@+id/state_province"
        app:layout_constraintTop_toBottomOf="@+id/building_type" />

    <EditText
        android:id="@+id/state_province"
        android:layout_width="252dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"

        android:hint="@string/state_povince"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/city"
        app:layout_constraintStart_toStartOf="@+id/city"
        app:layout_constraintTop_toBottomOf="@+id/postal_code"
        android:autofillHints="State/Province" />

    <EditText
        android:id="@+id/city"
        android:layout_width="252dp"
        android:layout_height="wrap_content"

        android:hint="@string/city"
        android:layout_marginTop="16dp"
        android:autofillHints="City"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/state_province" />

    <EditText
        android:id="@+id/landmark"
        android:layout_width="252dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"

        android:hint="@string/landmark"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/city"
        app:layout_constraintStart_toStartOf="@+id/city"
        app:layout_constraintTop_toBottomOf="@+id/city"
        android:autofillHints="Landmark" />


    <EditText
        android:id="@+id/house_name"
        android:layout_width="252dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"

        android:hint="@string/house_nick_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/landmark"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/landmark"
        app:layout_constraintTop_toBottomOf="@+id/landmark"
        android:autofillHints="House Name"/>


    <EditText
        android:id="@+id/vacant"
        android:layout_width="252dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"

        android:autofillHints="Yes"

        android:hint="@string/vacant_yes_no"
        android:inputType="textPersonName"

        app:layout_constraintEnd_toEndOf="@+id/house_name"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="@+id/house_name"
        app:layout_constraintTop_toBottomOf="@+id/house_name" />

    <Button
        android:id="@+id/house_update_button"
        android:layout_width="110dp"
        android:layout_height="51dp"
        android:layout_marginTop="12dp"
        android:text="@string/update_house"
        android:textColor="#000"
        android:textSize="12sp"
        app:backgroundTint="#57bc90"
        app:layout_constraintEnd_toEndOf="@+id/vacant"
        app:layout_constraintTop_toBottomOf="@+id/vacant" />

    <Button
        android:id="@+id/upload_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:backgroundTint="#fff"
        android:text="@string/upload_image"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/house_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/house_image" />

    <Button
        android:id="@+id/delete_property"
        android:layout_width="110dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#57bc90"
        android:text="@string/delete_property"
        android:textColor="#000"
        app:layout_constraintEnd_toStartOf="@+id/house_update_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/vacant"
        app:layout_constraintTop_toBottomOf="@+id/vacant" />

</androidx.constraintlayout.widget.ConstraintLayout>