<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_google_button"
        android:layout_width="110dp"
        android:layout_height="34dp"
        android:layout_marginTop="12dp"

        app:layout_constraintEnd_toEndOf="@+id/or"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="@+id/or"
        app:layout_constraintTop_toBottomOf="@+id/or" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toTopOf="@+id/Username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_launcher_background"
        tools:ignore="VectorDrawableCompat"
        android:contentDescription="@string/name" />

    <EditText
        android:id="@+id/Username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="Password" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints="Password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/manual_sign_button"
        app:layout_constraintEnd_toEndOf="@+id/Username"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Username" />

    <Button
        android:id="@+id/manual_sign_button"
        android:layout_width="110dp"
        android:layout_height="36dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#fff"
        android:text="@string/manual_signup"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/or"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/or"
        android:layout_width="50dp"
        android:layout_height="19dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:gravity="center_horizontal"
        android:text="@string/or"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/manual_sign_button"
        app:layout_constraintStart_toStartOf="@+id/manual_sign_button"
        app:layout_constraintTop_toBottomOf="@+id/manual_sign_button" />

    <TextView
        android:id="@+id/registered"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="22dp"
        android:text="@string/registered"
        android:textColor="@color/black"

        app:layout_constraintEnd_toEndOf="@+id/sign_in_google_button"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="@+id/sign_in_google_button"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_google_button" />

    <TextView
        android:id="@+id/click_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/click_here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>