<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PropertyPage">


    <TextView
        android:id="@+id/my_listings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:gravity="center_horizontal"
        android:text="@string/my_properties"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/vacant_properties"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.63" />

    <Button
        android:id="@+id/vacant_properties"
        android:layout_width="142dp"
        android:layout_height="37dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#57bc90"
        android:padding="0dp"
        android:text="@string/vacant_properties_text"
        android:textColor="@color/black"
        android:textSize="8dp"
        app:layout_constraintBottom_toTopOf="@+id/recyclerview_properties"
        app:layout_constraintEnd_toEndOf="@+id/my_listings"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_properties"
        android:layout_width="398dp"
        android:layout_height="445dp"
        android:layout_marginBottom="16dp"

        app:layout_constraintBottom_toTopOf="@+id/add_property_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerview_properties"
        app:layout_constraintEnd_toEndOf="@+id/recyclerview_properties"
        app:layout_constraintStart_toStartOf="@+id/recyclerview_properties"
        app:layout_constraintTop_toTopOf="@+id/recyclerview_properties" />

    <Button
        android:id="@+id/add_property_button"
        android:layout_width="354dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:text="@string/add_property"
        app:backgroundTint="#57bc90"
        android:textColor="#000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>