<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="175dp"
    android:layout_margin="22dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="164dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="1dp">

        <ImageView
            android:id="@+id/property_card_image"
            android:layout_width="104dp"
            android:layout_height="104dp"
            android:src="@drawable/property"
            android:padding="15dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/house_image_img" />

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="102dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:orientation="vertical">


            <TextView
                android:id="@+id/property_card_house_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/property_card_address"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/property_card_building_type"
                android:layout_width="match_parent"
                android:layout_height="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true">


            <Button
                android:id="@+id/update_property_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:backgroundTint="#57bc90"
                android:layout_weight="1"
                android:text="@string/update_house_details"
                android:textSize="10sp" />

            <Button
                android:id="@+id/tenantDetails_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:backgroundTint="#57bc90"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:text="@string/vacant_properties_enter_tenant_details"
                android:textSize="10sp" />
        </LinearLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>